@@ -1882,7 +1882,7 @@ ags_pulse_server_do_poll_loop(void *ptr)
   priority = ags_priority_get_instance();
     
   /* Declare ourself as a real time task */
-  param.sched_priority = 1;
+  param.sched_priority = 45;
 
   str = ags_priority_get_value(priority,
 			       AGS_PRIORITY_RT_THREAD,
@@ -1892,13 +1892,18 @@ ags_pulse_server_do_poll_loop(void *ptr)
     param.sched_priority = (int) g_ascii_strtoull(str,
 						  NULL,
 						  10);
-
-    g_free(str);
   }
       
-  if(sched_setscheduler(0, SCHED_FIFO, &param) == -1) {
-    perror("sched_setscheduler failed");
+  if(str == NULL ||
+     ((!g_ascii_strncasecmp(str,
+			    "0",
+			    2)) != TRUE)){
+    if(sched_setscheduler(0, SCHED_FIFO, &param) == -1) {
+      perror("sched_setscheduler failed");
+    }
   }
+
+  g_free(str);
 #endif
 
 #ifdef AGS_WITH_PULSE
