@@ -216,7 +216,7 @@ main(int argc, char **argv)
     }
   }
 
-  param.sched_priority = 1;
+  param.sched_priority = 15;
 
   str = ags_priority_get_value(priority,
 			       AGS_PRIORITY_RT_THREAD,
@@ -226,13 +226,18 @@ main(int argc, char **argv)
     param.sched_priority = (int) g_ascii_strtoull(str,
 						  NULL,
 						  10);
+  }
 
-    g_free(str);
+  if(str == NULL ||
+     ((!g_ascii_strncasecmp(str,
+			    "0",
+			    2)) != TRUE)){
+    if(sched_setscheduler(0, SCHED_FIFO, &param) == -1) {
+      perror("sched_setscheduler failed");
+    }
   }
-  
-  if(sched_setscheduler(0, SCHED_FIFO, &param) == -1) {
-    perror("sched_setscheduler failed");
-  }
+
+  g_free(str);
 #endif
 
   /* parse command line parameter */
